Agregando links de referencia adentro de la msima página

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </figure>
             <nav>
                 <ul class="header">
-                    <li><a href="#iPhone7">Código</a></li>
-                    <li><a href="#Bloqueado">Inicio</a></li>
-                    <li><a href="#principal" >Principal</a></li>
-                    <li><a href="#landscape">Landscape</a></li>
+                    <li><a href="https://julioramirezb.github.io/iPhone7/#iPhone7">Código</a></li>
+                    <li><a href="https://julioramirezb.github.io/iPhone7/#Bloqueado">Inicio</a></li>
+                    <li><a href="https://julioramirezb.github.io/iPhone7/#principal" >Principal</a></li>
+                    <li><a href="https://julioramirezb.github.io/iPhone7/#landscape">Landscape</a></li>
                     <li><a href="../Práctica 3/ventana.html">Carpeta</a></li>
                     <li><a href="https://julioramirezb.github.io/Slides/" >Fotos</a></li>
                     <li><a href="http://127.0.0.1:5500/Pr%C3%A1ctica%205/machote.html">Slide</a></li>
