--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="https://julioramirezb.github.io/iPhone7/#landscape">Landscape</a></li>
                     <li><a href="../Práctica 3/ventana.html">Carpeta</a></li>
                     <li><a href="https://julioramirezb.github.io/Slides/" >Fotos</a></li>
-                    <li><a href="http://127.0.0.1:5500/Pr%C3%A1ctica%205/machote.html">Slide</a></li>
+                    <li><a href="https://julioramirezb.github.io/Landscape/">Slide</a></li>
                 </ul>
             </nav>
         </header>
