--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>iPhone</title>
-        <link rel="icon" type="image/png" href="../Iconos/icono Apple.PNG">
+        <link rel="icon" type="image/png" href="https://i.postimg.cc/j5Bc718C/icono-Apple.png">
         <link rel="stylesheet" href="estilos.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/356cf8bd5f.js" crossorigin="anonymous"></script>
