--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <li><a href="https://julioramirezb.github.io/iPhone7/#Bloqueado">Inicio</a></li>
                     <li><a href="https://julioramirezb.github.io/iPhone7/#principal" >Principal</a></li>
                     <li><a href="https://julioramirezb.github.io/iPhone7/#landscape">Landscape</a></li>
-                    <li><a href="../Práctica 3/ventana.html">Carpeta</a></li>
                     <li><a href="https://julioramirezb.github.io/Slides/" >Fotos</a></li>
                     <li><a href="https://julioramirezb.github.io/Landscape/">Slide</a></li>
+                    <li><a href="https://julioramirezb.github.io/Blog2020/">Blog</a></li>
                 </ul>
             </nav>
         </header>
@@ -195,7 +195,7 @@
                                 <figcaption>Calendario</figcaption>
                             </div>
                             <div class="icono icon-fotos">
-                                <a href="http://127.0.0.1:5500/Pr%C3%A1ctica%204/fotos.html">
+                                <a href="https://julioramirezb.github.io/Slides/">
                                     <img src="https://i.postimg.cc/s2DTd7Qf/fotos.jpg" title="Fotos"
                                     width="70px" height="70px" alt="icono de fotos">
                                     <figcaption>Fotos</figcaption>
